force-app/main/default/objects/Direct_Bill_Commission__c/Direct_Bill_Commission__c.object-meta.xml
<CustomObject>
    <description>Commissions from Carrier Direct Bill Statements</description>
    <label>Direct Bill Commission</label>
    <nameField>
        <label>Direct Bill Commission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Direct Bill Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>