force-app/main/default/objects/Direct_Bill_Commission__c/fields/Accounting_Month__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Month__c</fullName>
    <label>Accounting Month</label>
    <type>Date</type>
</CustomField>