force-app/main/default/objects/Direct_Bill_Commission__c/fields/Apply_to_Month__c.field-meta.xml
<CustomField>
    <fullName>Apply_to_Month__c</fullName>
    <label>Apply to Month</label>
    <type>Date</type>
</CustomField>