force-app/main/default/objects/Direct_Bill_Commission__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Direct Bill Commissions</relationshipLabel>
    <relationshipName>Direct_Bill_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>