force-app/main/default/objects/Direct_Bill_Commission__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>