force-app/main/default/objects/Direct_Bill_Commission__c/fields/Split_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Split_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Calculated</label>
    <type>Checkbox</type>
</CustomField>