force-app/main/default/objects/Direct_Bill_Commission__c/fields/Statement_Premium__c.field-meta.xml
<CustomField>
    <fullName>Statement_Premium__c</fullName>
    <label>Statement Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>