force-app/main/default/objects/Direct_Bill_Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Accounting_Month__c</columns>
    <columns>Apply_to_Month__c</columns>
    <columns>Insurance_Policy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>